# content-transfer-engine

./: .gitignore  CMakeLists.txt  README_CUDA.md  env.sh  hm_build.sh
.github/workflows/: docs.yml  lin.yml  main.yml
CMake/: HermesCommonConfig.cmake  HermesConfig.cmake
adapter/vfd/: H5FDhermes.cc  H5FDhermes_err.h  H5FDhermes_log.h  README.md  vfd-data-stat-dl.yaml
benchmark/: CMakeLists.txt  hermes_api_bench.cc  test_latency.cc  test_zmq.cc
ci/: load_deps.sh
codegen/: refresh_methods
codegen/codegen/util/: paths.py
config/: hermes_client_default.yaml  hermes_server_default.yaml
hermes_adapters/: CMakeLists.txt  real_api.h
hermes_adapters/filesystem/: CMakeLists.txt  filesystem.h  filesystem_io_client.h  filesystem_mdm.h  filesystem_mdm_singleton.cc
hermes_adapters/mapper/: abstract_mapper.h  mapper_factory.h
hermes_adapters/mpiio/: CMakeLists.txt  mpiio_api.cc  mpiio_api.h  mpiio_fs_api.h
hermes_adapters/nvidia_gds/: CMakeLists.txt  cufile_api.cc
hermes_adapters/posix/: CMakeLists.txt  posix_api.cc  posix_api.h  posix_fs_api.h
hermes_adapters/stdio/: CMakeLists.txt  stdio_api.cc  stdio_api.h  stdio_fs_api.h
hermes_adapters/vfd/: CMakeLists.txt  H5FDhermes.cc
hermes_codegen/: README.md  setup.py
hermes_codegen/hermes_codegen/: codegen.py
hermes_codegen/hermes_codegen/util/: paths.py
hermes_shm/include/hermes_shm/util/: logging.h
html/: _h5_f_dhermes_8h_source.html  _h5_f_dhermes__err_8h_source.html  abstract__mapper_8h_source.html  adapter__test__utils_8h_source.html  adapter__utils_8h_source.html  annotated.html  annotated_dup.js  balanced__mapper_8h_source.html  bucket_8h.html  bucket_8h__dep__incl.map  bucket_8h__dep__incl.md5  bucket_8h__incl.map  bucket_8h__incl.md5  bucket_8h_source.html  buffer__organizer_8h_source.html  buffer__pool_8cc.html  buffer__pool_8cc.js  buffer__pool_8cc__incl.map  buffer__pool_8cc__incl.md5  buffer__pool_8cc_aba276e3158ce278c8b895b936678b255_icgraph.map  buffer__pool_8cc_aba276e3158ce278c8b895b936678b255_icgraph.md5  buffer__pool_8h.html  buffer__pool_8h.js  buffer__pool_8h__dep__incl.map  buffer__pool_8h__dep__incl.md5  buffer__pool_8h__incl.map  buffer__pool_8h__incl.md5  buffer__pool_8h_source.html  buffer__pool__internal_8h.html  buffer__pool__internal_8h.js  buffer__pool__internal_8h__dep__incl.map  buffer__pool__internal_8h__dep__incl.md5  buffer__pool__internal_8h__incl.map  buffer__pool__internal_8h__incl.md5  buffer__pool__internal_8h_source.html  catch__config_8h_source.html  classapi_1_1_status-members.html  classapi_1_1_status.html  classapi_1_1_status.js  classapi_1_1_status_a12ac0a86f097a9c62a01fca4dbed7e55_icgraph.map  (+2610 more)
html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  (+87 more)
include/hermes/: bucket.h  config.h  config_client_default.h  config_manager.h  config_server.h  config_server_default.h  hermes.h  hermes_run_types.h  hermes_types.h  score_histogram.h  slab_allocator.h
include/hermes/data_stager/: abstract_stager.h  binary_stager.h  nvidia_gds_stager.h  stager_factory.h
include/hermes/dpe/: dpe.h  dpe_factory.h  minimize_io_time.h  random.h  round_robin.h
src/: CMakeLists.txt  config_client.h  hermes_config_manager.cc
tasks/: CMakeLists.txt  chimaera_repo.yaml
tasks/hermes_blob_mdm/include/hermes_blob_mdm/: hermes_blob_mdm.h  hermes_blob_mdm_lib_exec.h  hermes_blob_mdm_methods.h  hermes_blob_mdm_methods.yaml  hermes_blob_mdm_tasks.h
tasks/hermes_blob_mdm/src/: hermes_blob_mdm.cc
tasks/hermes_core/: CMakeLists.txt
tasks/hermes_core/include/hermes_core/: hermes_core.h  hermes_core_client.h  hermes_core_lib_exec.h  hermes_core_methods.compiled.yaml  hermes_core_methods.h  hermes_core_methods.yaml  hermes_core_tasks.h
tasks/hermes_core/src/: CMakeLists.txt  hermes_core.cc  hermes_core_client.cc  hermes_core_runtime.cc
tasks/old/data_stager/src/: CMakeLists.txt  data_stager.cc
tasks/old/hermes_blob_mdm/src/: CMakeLists.txt  hermes_blob_mdm.cc
tasks/old/hermes_bucket_mdm/src/: CMakeLists.txt  hermes_bucket_mdm.cc
tasks/old/hermes_data_op/src/: CMakeLists.txt  hermes_data_op.cc
tasks/old/hermes_mdm/src/: CMakeLists.txt  hermes_mdm.cc
tasks/old/posix_bdev/src/: CMakeLists.txt  posix_bdev.cc
tasks/old/ram_bdev/src/: CMakeLists.txt  ram_bdev.cc
test/jarvis_hermes/jarvis_hermes/hermes_api/: pkg.py
test/jarvis_hermes/jarvis_hermes/hermes_nvidia_gds_tests/: README.md  pkg.py
test/jarvis_hermes/jarvis_hermes/hermes_run/: pkg.py
test/jarvis_hermes/jarvis_hermes/hermes_unit_tests/: pkg.py
test/jarvis_hermes/pipelines/: iowarp_base.yaml  test_ior.yaml  test_ior_basic.yaml
test/pipelines/hermes/: test_hermes cuda.yaml  test_hermes.yaml
test/pipelines/nvidia_gds/: test_hermes_nvidia_gds.yaml
test/pipelines/posix/: test_hermes_posix_basic_mpi_large.yaml  test_hermes_posix_basic_small.yaml  test_hermes_posix_simple_io_omp.yaml
test/pipelines/stdio/: test_hermes_stdio_adapter_bypass.yaml  test_hermes_stdio_basic_large.yaml  test_hermes_stdio_mapper.yaml
test/pipelines/vfd/: test_hermes_vfd_python.yaml  test_hermes_vfd_scratch.yaml
test/unit/: CMakeLists.txt
test/unit/config/: CMakeLists.txt  test_config.cc  test_init.cc  test_init.h
test/unit/hermes/: CMakeLists.txt  test_bucket.cc  test_bucket_cuda.cc  test_init.cc
test/unit/hermes_adapters/: CMakeLists.txt  filesystem_tests.h
test/unit/hermes_adapters/nvidia_gds/: CMakeLists.txt  gds_adapter_basic_test.cc  gds_adapter_simple_test.cc
test/unit/ipc/: CMakeLists.txt  test_finalize.cc  test_ipc.cc  test_serialize.cc
wrapper/: CMakeLists.txt
wrapper/python/: CMakeLists.txt  py_hermes.cpp
wrapper/python/cpp/: CMakeLists.txt  py_hermes.cpp
wrapper/python/test/unit/: test_hermes.py  (+1 more)
(+69 files in other folders)
